Update Util.java