@@ -3,7 +3,7 @@ package com.github.mkram17.bazaarutils.utils;
 import com.github.mkram17.bazaarutils.config.BUConfig;
 import com.github.mkram17.bazaarutils.events.BUListener;
 import com.github.mkram17.bazaarutils.misc.ItemData;
-import net.minecraft.client.Minecraft;                         // 1.8.9
+import net.minecraft.client.Minecraft;
 import net.minecraft.event.ClickEvent;
 import net.minecraft.event.HoverEvent;
 import net.minecraft.util.*;
@@ -15,25 +15,25 @@ import org.apache.logging.log4j.LogManager;
 import java.awt.*;
 import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.StringSelection;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 
 /**
- * Generic helpers (chat notifications, clipboard, file-I/O, tick scheduling…)
- * pure Forge-1.8.9, no Fabric imports.
+ * Forge-1.8.9 utility collection – chat, clipboard, tick-tasks, file I/O.
  */
 public final class Util implements BUListener {
 
-    /* ────────────────────────────────────────────────────────────────
-       Notification helpers
-       ──────────────────────────────────────────────────────────────── */
+    /* ───────────────────────── notifications ────────────────────── */
 
-    public enum notificationTypes {GUI, FEATURE, BAZAARDATA, COMMAND, ITEMDATA}
+    public enum NotificationType {
+        GUI, FEATURE, BAZAARDATA, COMMAND, ITEMDATA;
 
-    /* ────────────────────────────────────────────────────────────────
-       Simple help-text
-       ──────────────────────────────────────────────────────────────── */
+        /** Tiny helper – can be expanded into proper per-type toggles later. */
+        public boolean isEnabled() { return true; }
+    }
+
     public static final String HELPMESSAGE =
             "§eCommands: §7/bu or /bazaarutils opens the settings GUI\n" +
             "§6----------------------------------------\n" +
@@ -41,17 +41,14 @@ public final class Util implements BUListener {
             "§7/bu customorder … – manage custom orders\n" +
             "§6----------------------------------------";
 
-    /* ────────────────────────────────────────────────────────────────
-       Small task-scheduler executed every client tick
-       ──────────────────────────────────────────────────────────────── */
-    private static final class ScheduledTask {
-        int ticksLeft;
-        final Runnable action;
-        ScheduledTask(int ticks, Runnable run) { ticksLeft = ticks; action = run; }
-    }
-    private static final LinkedList<ScheduledTask> TASKS = new LinkedList<>();
+    /* ───────────────────────── tick scheduler ───────────────────── */
 
-    /** register tick-handler once */
+    private static final class ScheduledTask {
+        int ticksLeft; final Runnable run;
+        ScheduledTask(int t, Runnable r) { ticksLeft = t; run = r; }
+    }
+    private static final Deque<ScheduledTask> TASKS = new ArrayDeque<>();
+
     @Override public void subscribe() {
         MinecraftForge.EVENT_BUS.register(new Object() {
             @SubscribeEvent public void onTick(TickEvent.ClientTickEvent e) {
@@ -60,33 +57,25 @@ public final class Util implements BUListener {
                     Iterator<ScheduledTask> it = TASKS.iterator();
                     while (it.hasNext()) {
                         ScheduledTask t = it.next();
-                        if (--t.ticksLeft <= 0) {
-                            t.action.run();
-                            it.remove();
-                        }
+                        if (--t.ticksLeft <= 0) { t.run.run(); it.remove(); }
                     }
                 }
             }
         });
     }
 
-    /** schedule a Runnable for <code>ticks</code> client-ticks later */
-    public static void tickExecuteLater(int ticks, Runnable action) {
-        synchronized (TASKS) { TASKS.add(new ScheduledTask(ticks, action)); }
+    public static void tickExecuteLater(int ticks, Runnable r) {
+        synchronized (TASKS) { TASKS.add(new ScheduledTask(ticks, r)); }
     }
 
-    /* ────────────────────────────────────────────────────────────────
-       Chat + log helpers                                              */
-    /* ──────────────────────────────────────────────────────────────── */
+    /* ───────────────────── chat / log helpers ───────────────────── */
 
-    private static void sendRawChat(String raw) {
+    private static void raw(String s) {
         Minecraft mc = Minecraft.getMinecraft();
-        if (mc.thePlayer != null) mc.thePlayer.addChatMessage(new ChatComponentText(raw));
+        if (mc.thePlayer != null) mc.thePlayer.addChatMessage(new ChatComponentText(s));
     }
 
-    private static void sendStyledChat(String base,
-                                       ClickEvent click,
-                                       HoverEvent hover) {
+    private static void styled(String base, ClickEvent click, HoverEvent hover) {
         ChatComponentText comp = new ChatComponentText(base);
         ChatStyle style = new ChatStyle();
         style.setChatClickEvent(click);
@@ -96,77 +85,71 @@ public final class Util implements BUListener {
         if (mc.thePlayer != null) mc.thePlayer.addChatMessage(comp);
     }
 
-    public static void notifyAll(String msg) { notifyAll(msg, notificationTypes.GUI); }
+    public static void notifyAll(String msg) { notifyAll(msg, NotificationType.GUI); }
 
-    public static void notifyAll(String msg, notificationTypes type) {
-        if (!type.isEnabled() && !BUConfig.get().developer.allMessages) return;
+    public static void notifyAll(String msg, NotificationType type) {
+        boolean dev = BUConfig.get().isDeveloperMode();
+        if (!type.isEnabled() && !dev) return;
 
         String prefix = EnumChatFormatting.GOLD + "[Bazaar Utils] " + EnumChatFormatting.RESET;
-        sendRawChat(prefix + msg);
-        LogManager.getLogger(getCallingClassName()).info(msg);
+        raw(prefix + msg);
+        LogManager.getLogger(callingClass()).info(msg);
     }
 
     public static void notifyError(String msg, Throwable t) {
         String prefix = EnumChatFormatting.RED + "[Bazaar-Utils Error] " + EnumChatFormatting.RESET;
-        sendStyledChat(prefix + msg,
-                new ClickEvent(ClickEvent.Action.OPEN_URL, "https://discord.gg/xDKjvm5hQd"),
-                new HoverEvent(HoverEvent.Action.SHOW_TEXT,
-                        new ChatComponentText("Open Discord support server")));
-        if (t != null)
-            LogManager.getLogger(getCallingClassName()).error(msg, t);
-        else
-            LogManager.getLogger(getCallingClassName()).error(msg);
+        styled(prefix + msg,
+               new ClickEvent(ClickEvent.Action.OPEN_URL,"https://discord.gg/xDKjvm5hQd"),
+               new HoverEvent(HoverEvent.Action.SHOW_TEXT,
+                              new ChatComponentText("Open Discord support server")));
+        LogManager.getLogger(callingClass()).error(msg, t);
     }
 
-    /* clickable green command helper */
-    public static void notifyChatCommand(String text, String command) {
-        sendStyledChat(EnumChatFormatting.GREEN + text + EnumChatFormatting.RESET,
-                new ClickEvent(ClickEvent.Action.RUN_COMMAND, "/" + command),
-                new HoverEvent(HoverEvent.Action.SHOW_TEXT,
-                        new ChatComponentText("Run /" + command)));
+    public static void notifyChatCommand(String text, String cmd) {
+        styled(EnumChatFormatting.GREEN + text + EnumChatFormatting.RESET,
+               new ClickEvent(ClickEvent.Action.RUN_COMMAND, '/' + cmd),
+               new HoverEvent(HoverEvent.Action.SHOW_TEXT,
+                              new ChatComponentText("Run /" + cmd)));
     }
 
-    /* ────────────────────────────────────────────────────────────────
-       Misc helpers
-       ──────────────────────────────────────────────────────────────── */
+    /* ───────────────────────── misc helpers ─────────────────────── */
 
     public static void sendCommand(String cmd) {
         Minecraft mc = Minecraft.getMinecraft();
-        if (mc.thePlayer != null) mc.thePlayer.sendChatMessage("/" + cmd);
+        if (mc.thePlayer != null) mc.thePlayer.sendChatMessage('/' + cmd);
     }
 
     public static void copyToClipboard(String s) {
-        Clipboard cb = Toolkit.getDefaultToolkit().getSystemClipboard();
-        cb.setContents(new StringSelection(s), null);
+        try {
+            Clipboard cb = Toolkit.getDefaultToolkit().getSystemClipboard();
+            cb.setContents(new StringSelection(s), null);
+        } catch (Exception ignored) { /* headless env? */ }
     }
 
-    public static String removeFormatting(String s) {
-        return s.replaceAll("§.", "").replace(",", "").trim();
-    }
+    public static String removeFormatting(String s) { return s.replaceAll("§.", ""); }
 
     public static double pretty(double d) { return Math.round(d * 100) / 100.0; }
 
-    public static void writeFile(Object obj) {
+    public static void writeFile(Object o) {
         try {
-            Files.writeString(Path.of("bazaar_data.json"), Objects.toString(obj));
-            notifyAll("Data written to bazaar_data.json");
-        } catch (Exception e) {
-            notifyError("Failed to write file", e);
-        }
+            Files.write(Paths.get("bazaar_data.json"),
+                        Objects.toString(o).getBytes(StandardCharsets.UTF_8));
+            notifyAll("Wrote bazaar_data.json");
+        } catch (Exception e) { notifyError("File write failed", e); }
     }
 
-    /* add + persist watched-item */
+    /* add & persist watched item */
     public static void addWatchedItem(ItemData d) {
         if (d == null) return;
-        BUConfig.get().watchedItems.add(d);
-        BUConfig.HANDLER.save();
-        notifyAll("Added item: " + d.getGeneralInfo(), notificationTypes.ITEMDATA);
+        BUConfig.get().getWatchedItems().add(d);
+        BUConfig.save();
+        notifyAll("Added item: " + d.getGeneralInfo(), NotificationType.ITEMDATA);
         ItemData.update();
     }
 
-    /* utility */
-    private static String getCallingClassName() {
+    /* util */
+    private static String callingClass() {
         StackTraceElement[] st = Thread.currentThread().getStackTrace();
-        return st.length > 3 ? st[3].getClassName() : "Unknown";
+        return st.length > 4 ? st[4].getClassName() : "Unknown";
     }
 }
